# yahoo-news-comment-scraper

./: .gitignore  README.md  pyproject.toml  save_webpage_html.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sql
memo/: memo_bug.md  memo_html.md  memo_postgresql.md  memo_simple_database.md  memo_simple_model.md  memo_train.md  memo_url.md  memo_user_comment_scraper.md  memo_xpath.md  memo_zeroshot_classification.md
scraping/: article_comment_scraper.py  article_link_scraper.py  classes.py  comment_scraper.py  db_manager.py  functions.py  utils.py  xpath.json  xpath.py  xpath_article_comment_page.py  xpath_article_page.py  xpath_user_page.py
scraping/xpaths/: xpath_article_page.py  xpath_ranking_page.py  xpath_user_page.py
scripts/: backup_db.sh  db_manager.py  restore_db.sh
scripts/llm/: xlsx2csv.py  zeroshot.py
scripts/model/: classes.py  delete_all_table.sql  init.sql  main.py  optimize.py  simulate.py  utils.py  visualize.py
scripts/model/mock/: init.sql  main.py  optimize.py
scripts/model/real/: data_converter.py  data_formatter.py  datetime_normalizer.py  evaluate.py  init.sql  memo.md  models.py  predict.py  preprocess.py  text2vec.py  train.py  visualize_raw.py  visualize_trained.py
scripts/model/real/exp_no_parent_comment/: README.md  models.py  (+1 more)
scripts/scraping/: article_comment_scraper.py  article_link_scraper.py  article_scraper.py  classes.py  functions.py  init.sql  main.py  main_user.py  user_comment_scraper.py
scripts/scraping/xpaths/: xpath_article_page.py  xpath_ranking_page.py  xpath_user_page.py
(+3 files in other folders)
