[project]
name = "yahoo-news-comment-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.25.0",
    "tqdm>=4.66.5",
    "webdriver-manager>=4.0.2",
]
