[project]
name = "yahoo-news-comment-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.14.1",
    "selenium>=4.25.0",
    "sqlalchemy>=2.0.36",
    "tqdm>=4.66.5",
    "webdriver-manager>=4.0.2",
]
