[project]
name = "yahoo-news-comment-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "selenium>=4.25.0",
    "sqlalchemy>=2.0.36",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.5",
    "transformers>=4.46.3",
    "webdriver-manager>=4.0.2",
]
